# api/controllers/AdminUserController.js
@@ -7,16 +7,11 @@ module.exports = {
     getAllUsers,
     getAllCustomers,
     getCustomerTransactions,
-    getCustomerProfile,
-    getCustomerBalance,
     deleteUser,
-    addTransactionRecord,
-    returnTransaction,
     // updateUserDetail,
     // getUserActivities,
     addUser,
-    addPOSUser,
-    redeemPoints
+    addPOSUser
 };
 
 /**
@@ -81,19 +76,6 @@ function addPOSUser(req, res, next) {
 }
 
 /**
-* POST /customers/redeem
-* Redeems the points of the customer. non-anonymous
-*
-* @param req the request
-* @param res the response
-*/
-function redeemPoints(req, res, next) {
-    co(function* () {
-        res.json(yield AdminUserService.redeemPoints(req.auth, req.swagger.params, req.body));
-    }).catch(next);
-}
-
-/**
  * Delete an admin user identified by unique id
  *
  * @param req the request
@@ -102,59 +84,5 @@ function redeemPoints(req, res, next) {
 function deleteUser(req, res, next) {
     co(function* () {
         res.json(yield AdminUserService.deleteUser(req.auth, req.swagger.params.id.value));
-    }).catch(next);
-}
-
-/**
- * Gets the profile of the customer. non-anonymous
- *
- * @param req the request
- * @param res the response
- */
-function getCustomerProfile(req, res, next) {
-    co(function* () {
-        console.log(req.body)
-        res.json(yield AdminUserService.getCustomerProfile(req.auth, req.body));
-    }).catch(next);
-}
-
-/**
- * POST /customers/balance
- * Gets the available points of a customer. non-anonymous
- *
- * @param req the request
- * @param res the response
- */
-function getCustomerBalance(req, res, next) {
-    co(function* () {
-        res.json(yield AdminUserService.getCustomerBalance(req.auth, req.body));
-    }).catch(next);
-}
-
-/**
- * POST /customers/earn
- * Logs the transaction history of the user. non-anonymous
- *
- * @param req the request
- * @param res the response
- * @param next the next step in the middleware flow
- */
-function addTransactionRecord(req, res, next) {
-    co(function* () {
-        res.json(yield AdminUserService.addTransactionRecord(req.auth, req.swagger.params, req.body));
-    }).catch(next);
-}
-
-/**
- * POST /customers/return
- * Updates the transaction amount of the customer. non-anonymous
- *
- * @param req the request
- * @param res the response
- * @param next the next step in the middleware flow
- */
-function returnTransaction(req, res, next) {
-    co(function* () {
-        res.json(yield AdminUserService.returnTransaction(req.auth, req.swagger.params, req.body));
     }).catch(next);
 }
